Get-ChildItem -File -Recurse | Where-Object { $_.Extension -eq '.nupkg' } | Select-Object -ExpandProperty FullName

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
       - name: Extract Module
         shell: pwsh
         run: |
+          Get-ChildItem -File -Recurse | Where-Object { $_.Extension -eq '.nupkg' } | Select-Object -ExpandProperty FullName
           $nupkg = Get-ChildItem ./artifacts/*.nupkg
           $extractPath = Join-Path ./artifacts 'PSFlurl'
           Expand-Archive -Path $nupkg -DestinationPath $extractPath
