--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,11 @@ jobs:
               Uri            = $release.upload_url -replace '\{\?.*\}',"?name=$($nupkg.Name)"
           }
           Invoke-RestMethod @assetParams
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '9.0.x'
           
       - name: Publish to PowerShell Gallery
         env:
