FROM mcr.microsoft.com/dotnet/sdk:9.0-preview-bookworm-slim

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official PowerShell image as a base
-FROM mcr.microsoft.com/docker/sdk:9.0-preview-bookworm-slim
+FROM mcr.microsoft.com/dotnet/sdk:9.0-preview-bookworm-slim
 
 # [Optional] Uncomment this section to install additional packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
