Add ms-dotnettools.dotnet-interactive-vscode to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
         "vscode": {
             "extensions": [
                 "ms-dotnettools.csharp",
-                "ms-vscode.powershell"
+                "ms-vscode.powershell",
+                "ms-dotnettools.dotnet-interactive-vscode"
             ],
             "settings": {
                 "terminal.integrated.defaultProfile.linux": "pwsh"
