--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
             "extensions": [
                 "ms-dotnettools.csharp",
                 "ms-vscode.powershell",
-                "ms-dotnettools.dotnet-interactive-vscode"
+                "ms-dotnettools.dotnet-interactive-vscode",
+                "ms-dotnettools.csdevkit"
             ],
             "settings": {
                 "terminal.integrated.defaultProfile.linux": "pwsh",
