--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,21 +4,20 @@
         {
             "label": "Import PSFlurl Module",
             "type": "shell",
-            "command": "Import-Module -Name '${workspaceFolder}/PSFlurl.psd1' -Force -Verbose",
+            "command": "Import-Module -Name '${workspaceFolder}/PSFlurl/PSFlurl.psd1' -Force -Verbose",
             "problemMatcher": [],
             "dependsOn": [
                 "dotnet: build"
             ]
         },
         {
-            "type": "dotnet",
-            "task": "build",
-            "group": "build",
+            "label": "Build PSFlurl Module",
+            "type": "shell",
+            "command": "${workspaceFolder}/build.ps1",
             "problemMatcher": [],
-            "label": "dotnet: build",
-            "options": {
-                "args": ["src/PSFlurl/PSFlurl.csproj","--configuration", "Release"]
-            }
+            "dependsOn": [
+                "dotnet: build"
+            ]
         }
     ]
 }
